--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+.nav{
+    background-color: #AE00FB;
+    color: #fff;
+    padding: 0.75em;
+    padding-left: 2em;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav a{
+    text-decoration: none;
+    color: #fff;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.userpic{
+    padding: 4em;
+    text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.userpic img{
+    width: 17em;
 }
-
-.App-link {
-  color: #61dafb;
+.intro{
+    text-align: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.intro h1{
+    font-size: 5em;
+}
+.intro p{
+    font-size: 2em;
+}
+.Service h1{
+    text-align: center;
+    margin-top: 2em;
+    font-weight: 600;
+    margin-bottom: 2em;
+}
+.BoxService img{
+    text-align: center;
+    width: 35em;
+}
+.BoxService2 h1{
+    text-align: center;
+    font-size: 3em;
+}
+.BoxService2 p{
+    text-align: center;
+    margin: 2em;
+    font-size: 1.5em;
+    font-weight: 500;
+}
+.box{
+    margin: 4em;
 }
