--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,8 @@
 .BoxService img{
     text-align: center;
     width: 35em;
+    margin: auto;
+    display: block;
 }
 .BoxService2 h1{
     text-align: center;
@@ -58,7 +60,7 @@
 }
 .skill-topic{
     text-align: center;
-    margin-left: 10%;
+    margin-left: 6%;
     font-size: 1.2em;
     font-weight: 700;
 }
@@ -68,4 +70,62 @@
 .project h1{
      text-align: center;
      font-size: 3em;
+}
+.project-pic img{
+    text-align: center;
+    width: 23em;
+    border-radius: 1.2em;
+    margin: auto;
+    display: block;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border: 2px solid #AE00FB;
+}
+/* .project-pic img:hover{
+    /* width: 22.5em; */
+/* } */
+.project-pic{
+    margin-top: 4em;
+}
+.project-about{
+    margin-top: 4em;
+    text-align: center;
+}
+.project-about p{
+    text-align: center;
+    margin: 2em;
+    font-size: 1.5em;
+    font-weight: 500;
+}
+.project-about h1{
+    font-size: 3em;
+}
+a{
+    text-decoration: none;
+    color: #fff;
+}
+a:hover{
+    color: #fff;
+}
+.btn-box{
+    align-items: center;
+}
+.btn{
+    margin: 0 2em;
+    border: 2px solid #AE00FB;
+    background-color: #fff;
+    color: #AE00FB;
+    font-weight: 600;
+    padding: 0.3em 0.5em;
+    width: 5em;
+}
+.btn:hover{
+    background-color: #AE00FB;
+    color: #fff;
+    border: 2px solid #fff;
+}
+.btn a{
+    color: #AE00FB;
+}
+.btn a:hover{
+    color: #fff;
 }
