--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-/* .nav {
-  background-color: #ae00fb;
-  color: #fff;
-  padding: 0.75em;
-  padding-left: 2em;
-} */
-/* .nav a {
-  text-decoration: none;
-  color: #fff;
-} */
 .userpic {
   padding: 4em;
 }
@@ -177,27 +167,36 @@ a:hover {
     font-size: 1.5em;
   }
   .skill-topic {
-  margin-left: 0;
-}
-.pro-bar {
+    margin-left: 0;
+  }
+  .progress {
+  width: 60%;
+  }  
+  .pro-bar {
+    margin: 1em;
+  }
+  .project-pic img {
+    width: 20em;
+  }
+  .project-pic {
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+  .project-about {
+    margin-top: 3.5em;
+    margin-bottom: 3.5em;
+    text-align: center;
+  }
+  .project-about p {
+    margin: 1.5em;
+  }
+  .social2 img {
+    width: 20em;
+  }
+  .btn{
+    margin: 0 1em;
+  }
+  .contact p {
   margin: 1em;
-}
-.project-pic img {
-  width: 20em;
-}
-.project-pic {
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-.project-about {
-  margin-top: 3.5em;
-  margin-bottom: 3.5em;
-  text-align: center;
-}
-.project-about p {
-  margin: 1.5em;
-}
-.social2 img {
-  width: 20em;
 }
 }
